<resources>
    <string name="app_name">DBConnection</string>
    <string name="search">Pesquisar</string>
    <string name="cod">Cod:</string>
    <string name="name">Nome</string>
    <string name="phone">Telefone</string>
    <string name="include">Incluir</string>
    <string name="change">Alterar</string>
    <string name="delete">Excluir</string>
    <string name="list">Listar</string>
    <string name="informName">Informe o nome</string>
    <string name="informPhone">Informe o telefone</string>
    <string name="informCod">Informe o código</string>
    <string name="edit_item">edit item</string>
    <string name="person">person</string>
    <string name="save">Salvar</string>
    <string name="add">add</string>
    <string name="search_tv">Pesquisar</string>
    <string name="enter_the_code">Digite o código...</string>
</resources>