<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ListActivity">

    <TextView
        android:id="@+id/tvSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:text="@string/search_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tlSearch"
        app:layout_constraintBottom_toBottomOf="@id/tlSearch"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlSearch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/tvSearch"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearch"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_code" />

    </com.google.android.material.textfield.TextInputLayout>

    <ListView
        android:id="@+id/lvMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlSearch">


    </ListView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ftBtnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/add"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        app:fabSize="auto"/>

    <ImageButton
        android:id="@+id/btSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/tlSearch"
        app:layout_constraintStart_toEndOf="@+id/tlSearch"
        app:layout_constraintTop_toTopOf="@+id/tlSearch"
        app:srcCompat="@android:drawable/ic_menu_search" />


</androidx.constraintlayout.widget.ConstraintLayout>
